[package]
name = "server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
bytes = "1.10.1"
pem = "3.0.5"
quinn = "0.11.7"
rcgen = { version = "0.13.2", features = ["aws_lc_rs"] }
rustls = { version = "0.23.25", features = ["aws-lc-rs", "ring"] }
spdlog-rs = "0.4.1"
tokio = { version = "1.44.2", features = ["full"] }
